objects/ZipCode__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Territory__r.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rotation__c</fullName>
        <label>Rotation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Zip Codes</relationshipLabel>
        <relationshipName>ZipCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Community</referenceTo>
        <relationshipName>ZipCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zip Code</label>
    <nameField>
        <displayFormat>ZC-{0000000000}</displayFormat>
        <label>Zip Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>